added checkbox script to articles

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -47,9 +47,22 @@
     <div class="articles_container">
       <%= render 'articles_list', articles: @articles %>
     </div>
-    <%= paginate @articles %>
     <div class="clear"></div>
     
   </div>
   
 </div>
+
+<script type="text/javascript">
+$(document).ready(function(){
+  $(".filter_sorter li label").live('click',function(){
+    var idCheck = $(this).attr("for");
+
+    if($('#'+idCheck).attr('checked')){
+  			$(this).prev("span").removeClass("active");
+  		} else {
+  			$(this).prev("span").addClass("active");
+  		}
+  });
+});
+</script>
