--- a/app/views/activities/_preview_catalog_item.html.erb
+++ b/app/views/activities/_preview_catalog_item.html.erb
@@ -11,10 +11,8 @@
       <%= link_to activity.title, activity %>
     </div>
     
-    <% unless (ages = activity.compact_ages).empty? %>
-    Детям <%= ages.map { |int| "#{int[:start_year]}-#{int[:end_year]} лет" }.join(',') %>
+    Детям <%= activity.age %>
     <br />
-    <% end %>
     
     <% if activity.organization %>
     Учреждение: <%= link_to activity.organization.title, activity.organization %> 
