--- a/app/views/contest_memberships/show.html.erb
+++ b/app/views/contest_memberships/show.html.erb
@@ -38,6 +38,18 @@
         </div>
       </div>
     </div>
+    <div class="clear"></div>
+    <div class="comment treeview">
+      <ul>
+        <% @comments.each do |comment| %>
+          <%= render 'shared/comment', comment: comment %>
+        <% end %>
+      </ul>
+    </div>
+    <div class="add_comment">
+      <%= render 'shared/comment_form' %>
+    </div>
+    <div class="clear"></div>
   </div>
   <div class="sidebar">
     <%= render 'shared/sidebar' %>
