setup profile menu, display comments at notifications page

--- a/app/views/users/_profile_menu.html.erb
+++ b/app/views/users/_profile_menu.html.erb
@@ -1,10 +1,10 @@
 <div class="post_category_menu">
   <ul>
-    <%= content_tag :li, link_to("Профиль", profile_path),
+    <%= content_tag :li, link_to("Профиль", dashboard_profile_path),
                          class: "profile_ico#{(current == 'profile' ? ' active' : '')}" %>
-    <%= content_tag :li, link_to("Комментарии", profile_comments_path),
+    <%= content_tag :li, link_to("Комментарии", dashboard_notifications_path),
                          class: "comment_ico#{(current == 'comments' ? ' active' : '')}" %>
-    <%= content_tag :li, link_to("Избранное", favourites_path),
+    <%= content_tag :li, link_to("Избранное", dashboard_favourites_path),
                          class: "fav_ico#{(current == 'favourites' ? ' active' : '')}" %>
   </ul>
   <div class="clear"></div>
