display favourites items in dashboard, tune sample data for it

--- a/app/views/favourites/index.html.erb
+++ b/app/views/favourites/index.html.erb
@@ -6,23 +6,16 @@
     <%= render 'users/profile_menu', current: 'favourites' %>
     <div class="title">Избранные материалы яркого журнала</div>
     <% @favourites.each do |favourite| %>
-      <div class="profile_magazine">
-        <div class="info">
-          <%= link_to "delete", favourite, method: :delete, confirm: "You sure?", :class => "close" %>
-          <div class="thumb">
-            <a href=""><img src="samp/samp_1.jpg" style="background-image: url("file:///home/khodzha/Documents/bp%20samples/samp/samp_1.jpg");"></a>
-          </div>
-          <div class="name">
-            <%=link_to favourite.url, favourite.url %>
-          </div>
-          <div class="date">27.03.2012</div>
-        </div>
-      </div>
+      <% if favourite.relation_type == 'ContestMembership' %>
+        <%= render "contest_membership_item", favourite: favourite, object: favourite.relation %>
+      <% else %>
+        <%= render "item", favourite: favourite, object: favourite.relation %>
+      <% end %>
     <% end %>
+    
+    <div class="clear"></div>
   </div>
-  <div class="sidebar">
-    <%= render 'shared/sidebar' %>
-  </div>
+  <%= render 'shared/sidebar' %>
   <div class="clear"></div>
 </div>
 
