--- a/app/views/contest_memberships/show.html.erb
+++ b/app/views/contest_memberships/show.html.erb
@@ -11,13 +11,15 @@
     </div>
     <div class="work_detail">
       <div class="left_part">
-        <div class="rating_block">
-          <span class="name">Рейтинг</span>
-          <div class="rating">Звезды</div>
-          <span><%= @membership.votes.count %><%= Russian::pluralize(@membership.votes.count, " голос", " голоса", " голосов") %></span>
-          <br>
-          <a href="">Отменить</a>
-        </div>
+        <% if current_user && @contest.active? %>
+          <div class="rating_block">
+            <span class="name">Рейтинг</span>
+            <div class="rating">Звезды</div>
+            <span><%= @membership.votes.count %><%= Russian::pluralize(@membership.votes.count, " голос", " голоса", " голосов") %></span>
+            <br>
+            <a href="">Отменить</a>
+          </div>
+        <% end %>
         <% if Time.now < @membership.contest.started_at %>
           <div class="rating_info_start">
             <span class="arrow"></span>
