--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -699,6 +699,10 @@ span.sim_check.active { background-position:0px 0px; }
 #footer .phone_info { font-size:11px; opacity:0.6; padding-bottom:10px;}
 #footer .phone_info span { font-size:17px; font-weight:600;}
 
+#login_block .is_login {}
+#login_block .is_login .login_user_flag { font-size:11px; background:url(/assets/user_name_login_flag.png); text-decoration:none; white-space:nowrap; line-height:21px; width:85px; height:21px; display:inline-block; position:relative; color:#fff; padding:0px 6px 0px 25px; overflow:hidden}
+#login_block .is_login .login_user_flag .mask {  position:absolute; right:0px; top:0px; background:url(/assets/user_name_login_mask.png); width:36px; height:21px; display:block;}
+#login_block .is_login .logout { color:#c51917; font-size:11px; line-height:21px;}
 
 @media screen and (max-width: 1080px) {
 	.preview_cell { float:left; width:23%; margin-left:1%; margin-right:1%}
