fix sidebar position

--- a/app/views/favourites/index.html.erb
+++ b/app/views/favourites/index.html.erb
@@ -12,10 +12,11 @@
         <%= render "item", favourite: favourite, object: favourite.relation %>
       <% end %>
     <% end %>
-    
     <div class="clear"></div>
   </div>
-  <%= render 'shared/sidebar' %>
+  <div class="sidebar">
+    <%= render 'shared/sidebar' %>
+  </div>
   <div class="clear"></div>
 </div>
 
