--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,7 @@
         <%= image_tag @article.picture.url(:medium) %>
       </div>
       <div class="short_desc">
-        <%= @article.short_description %>
+        <%== @article.short_description %>
       </div>
       <div class="clear"></div>
     </div>
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="description">
-      <%= @article.content %>
+      <%== @article.content %>
     </div>
     <div class="clear"></div>
     <div class="comment treeview">
