--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -254,8 +254,58 @@ h1 { font-size:22px; color:#4f4f4f}
 .council .trustee .title { font-family:Futura; border-bottom:1px solid #c69141; color:#7a5113; text-align:center; letter-spacing:-1px}
 
 
+/* bright journal */
+.journal_title { text-align:center; padding-bottom:20px;}
+.journal_title span { color:#787878; font-size:16px; }
+
+.personality_slider { width:520px; height:320px; float:left; position:relative; margin-bottom:20px}
+.personality_slider  .person_slide_lenta { position:absolute; z-index:100; right:-5px; top:-5px}
+.personality_slider .slides_container { width:520px; height:320px;}
+.personality_slider .slides_container .slide { height:320px; width:520px; -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; display:block; position:relative; overflow:hidden}
+.personality_slider .slides_container .info { position:absolute; bottom:0; left:0; background:url(../assets/slider_control_bg.png); padding:5px 10px; width:500px; color:#e7e5e5; font-size:12px}
+.personality_slider .slides_container .info .name { color:#fff; font-weight:bold }
+
+.personality_slider .prev, .personality_slider .next { display:block; position:absolute; z-index:15; top:120px; }
+.personality_slider .prev { left:10px; }
+.personality_slider .next { right:10px; }
+
+.personality_slider .pagination { display:none; }
+
+.personality_column { margin-left:540px; height:320px; overflow:hidden; }
 
 
+.personality_preview { width:33%; float:left; height:320px; }
+
+.personality_preview .personality_wrapper { width:160px; position:relative; margin:auto; text-align:center; }
+
+.personality_preview .cat { font-size:18px; font-family:Futura; color:#f3452e; }
+.personality_preview .mark { background:url(../assets/exp_mark.png) no-repeat; display:block; width:19px; height:24px; text-align:center; line-height:24px; padding:0px 10px 0px 5px; color:#fff; position:absolute; top:70px; z-index: 10; }
+.personality_preview .thumb { position:relative; float:left; width:120px; height:120px; overflow:hidden; margin-left:20px; }
+.personality_preview .thumb .mask { width:120px; height:120px; background:url(../assets/rukov_mask.png) no-repeat center center; display:block; position:absolute; }
+.personality_preview .name { font-weight:bold; color:#007ba4; font-size:15px; display:block; }
+.personality_preview .info { color:#544d4d; display:block; }
+.personality_preview .date { color:#74746f; font-size:12px; display:block; font-weight:bold; }
+
+.personality_preview.exp .thumb { -moz-border-radius:60px; border-radius:60px; -webkit-border-radius:60px; -khtml-border-radius:60px;}
+.personality_preview.exp .thumb img { border-radius:60px; width:120px; height:120px;}
+
+
+.rubric { float:left; width:200px; min-height:100px; position:relative; }
+.rubric .title { font-family:Futura; font-size:18px; }
+.rubric_list a { font-size:16px; font-family:Futura; color:#f3452e; }
+
+.rubric .rubric_wrapp.fixed { position:fixed; top:20px; margin-left:-10px; background:#fff; padding:10px;  -moz-border-radius:10px; border-radius:10px; -webkit-border-radius:10px; -khtml-border-radius:10px; z-index:1000; }
+
+
+.journal_post { margin-left:20px; float:left; width: 600px;}
+.journal_post .title { font-family:Futura; font-size:18px; background:url(../assets/bright_magazine_top_line.jpg) repeat-x center; }
+.journal_post .title span { background:#fff; padding-right:5px}
+
+.journal_preview { padding:10px 0px}
+.journal_preview .thumb { float:left; width:160px; height:100px; -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; overflow:hidden}
+.journal_preview .thumb img { width:160px; height:100px; border-radius:6px; }
+.journal_preview .info { margin-left:180px; color:#4f4f4f}
+.journal_preview .info .date { color:#74746f; font-size:12px; font-weight:bold;}
 
 
 
