add Directions to admin and fix admin/activities. Need to add organization to activity

--- a/app/views/shared/_editor_toolbar.html.erb
+++ b/app/views/shared/_editor_toolbar.html.erb
@@ -1,8 +1,9 @@
 <div id="wysihtml5-toolbar-<%= element_id %>" style="display: none;">
   <a data-wysihtml5-command="bold">bold</a>
   <a data-wysihtml5-command="italic">italic</a>
-  <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3">intermediate header</a>
   <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="blockquote">quote</a>
+  <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h4">question</a>
+  <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3">intermediate header</a>
   <a data-wysihtml5-command="insertImage">insert image</a>
   <div data-wysihtml5-dialog="insertImage" style="display: none;">
     <label>
@@ -25,10 +26,10 @@
 <!-- TODO: looks ugly...brr -->
 
 <script>
-$(document).ready(function() {
-  var editor = new wysihtml5.Editor("<%= element_id %>", { 
-              toolbar: "wysihtml5-toolbar-<%= element_id %>",
-              parserRules:  wysihtml5ParserRules
+  $(document).ready(function() {
+  var editor = new wysihtml5.Editor("<%= element_id %>", {
+  toolbar: "wysihtml5-toolbar-<%= element_id %>",
+  parserRules:  wysihtml5ParserRules
   });
-});
+  });
 </script>
