--- a/app/views/admin/article_posts/_form.html.erb
+++ b/app/views/admin/article_posts/_form.html.erb
@@ -4,55 +4,13 @@
     <%= f.input :title %>
     <%= f.input :category, as: :select, collection: ArticleCategory.all, include_blank: false %>
     <%= f.input :author, as: :select, collection: User.all, include_blank: false %>
-    <div id="wysihtml5-toolbar-article-short" style="display: none;">
-    <a data-wysihtml5-command="bold">bold</a>
-    <a data-wysihtml5-command="italic">italic</a>
-    <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3">intermediate header</a>
-    <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="blockquote">quote</a>
-    <a data-wysihtml5-command="insertImage">insert image</a>
-    <div data-wysihtml5-dialog="insertImage" style="display: none;">
-      <label>
-	Image:<input data-wysihtml5-dialog-field="src" value="">
-      </label>
-      <a data-wysihtml5-dialog-action="save">OK</a>
-      <a data-wysihtml5-dialog-action="cancel">Cancel</a>
-    </div>
 
-    <a data-wysihtml5-command="createLink">insert link</a>
-    <div data-wysihtml5-dialog="createLink" style="display: none;">
-      <label>
-	Link:<input data-wysihtml5-dialog-field="href" value="http://" class="text">
-      </label>
-      <a data-wysihtml5-dialog-action="save">OK</a> <a data-wysihtml5-dialog-action="cancel">Cancel</a>
-    </div>
-    <a data-wysihtml5-action="change_view" style="float:right">switch to html view</a>
-  </div>
-  <%= f.input :short_description, input_html: {size: 5} %>
-  <div id="wysihtml5-toolbar-article" style="display: none;">
-    <a data-wysihtml5-command="bold">bold</a>
-    <a data-wysihtml5-command="italic">italic</a>
-    <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3">intermediate header</a>
-    <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="blockquote">quote</a>
-
-    <a data-wysihtml5-command="insertImage">insert image</a>
-    <div data-wysihtml5-dialog="insertImage" style="display: none;">
-      <label>
-	Image:<input data-wysihtml5-dialog-field="src" value="">
-      </label>
-      <a data-wysihtml5-dialog-action="save">OK</a>
-      <a data-wysihtml5-dialog-action="cancel">Cancel</a>
-    </div>
-
-    <a data-wysihtml5-command="createLink">insert link</a>
-    <div data-wysihtml5-dialog="createLink" style="display: none;">
-      <label>
-	Link:<input data-wysihtml5-dialog-field="href" value="http://" class="text">
-      </label>
-      <a data-wysihtml5-dialog-action="save">OK</a> <a data-wysihtml5-dialog-action="cancel">Cancel</a>
-    </div>
-    <a data-wysihtml5-action="change_view" style="float:right">switch to html view</a>
-  </div>
+    <%= render 'shared/editor_toolbar', element_id: 'article_short_description' %>
+    <%= f.input :short_description, input_html: {size: 10} %>
+    
+    <%= render 'shared/editor_toolbar', element_id: 'article_content' %>
     <%= f.input :content, input_html: {size: 10} %>
+    
     <%= f.input :picture, as: :file, hint: f.template.image_tag(f.object.picture.url(:medium)) %>
     <%= f.input :published %>
 
@@ -67,55 +25,13 @@
     <%= f.input :title %>
     <%= f.input :category, as: :select, collection: ArticleCategory.all, include_blank: false %>
     <%= f.input :author, as: :select, collection: User.all, include_blank: false %>
-    <div id="wysihtml5-toolbar-article-short" style="display: none;">
-    <a data-wysihtml5-command="bold">bold</a>
-    <a data-wysihtml5-command="italic">italic</a>
-    <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3">intermediate header</a>
-    <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="blockquote">quote</a>
-    <a data-wysihtml5-command="insertImage">insert image</a>
-    <div data-wysihtml5-dialog="insertImage" style="display: none;">
-      <label>
-	Image:<input data-wysihtml5-dialog-field="src" value="">
-      </label>
-      <a data-wysihtml5-dialog-action="save">OK</a>
-      <a data-wysihtml5-dialog-action="cancel">Cancel</a>
-    </div>
 
-    <a data-wysihtml5-command="createLink">insert link</a>
-    <div data-wysihtml5-dialog="createLink" style="display: none;">
-      <label>
-	Link:<input data-wysihtml5-dialog-field="href" value="http://" class="text">
-      </label>
-      <a data-wysihtml5-dialog-action="save">OK</a> <a data-wysihtml5-dialog-action="cancel">Cancel</a>
-    </div>
-    <a data-wysihtml5-action="change_view" style="float:right">switch to html view</a>
-  </div>
-  <%= f.input :short_description, input_html: {size: 5} %>
-  <div id="wysihtml5-toolbar-article" style="display: none;">
-    <a data-wysihtml5-command="bold">bold</a>
-    <a data-wysihtml5-command="italic">italic</a>
-    <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3">intermediate header</a>
-    <a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="blockquote">quote</a>
+    <%= render 'shared/editor_toolbar', element_id: 'article_short_description' %>
+    <%= f.input :short_description, input_html: {size: 5} %>
 
-    <a data-wysihtml5-command="insertImage">insert image</a>
-    <div data-wysihtml5-dialog="insertImage" style="display: none;">
-      <label>
-	Image:<input data-wysihtml5-dialog-field="src" value="">
-      </label>
-      <a data-wysihtml5-dialog-action="save">OK</a>
-      <a data-wysihtml5-dialog-action="cancel">Cancel</a>
-    </div>
-
-    <a data-wysihtml5-command="createLink">insert link</a>
-    <div data-wysihtml5-dialog="createLink" style="display: none;">
-      <label>
-	Link:<input data-wysihtml5-dialog-field="href" value="http://" class="text">
-      </label>
-      <a data-wysihtml5-dialog-action="save">OK</a> <a data-wysihtml5-dialog-action="cancel">Cancel</a>
-    </div>
-    <a data-wysihtml5-action="change_view" style="float:right">switch to html view</a>
-  </div>
+    <%= render 'shared/editor_toolbar', element_id: 'article_content' %>
     <%= f.input :content, input_html: {size: 10} %>
+    
     <%= f.input :picture, as: :file, hint: f.template.image_tag(f.object.picture.url(:medium)) %>
     <%= f.input :published %>
 
