--- a/app/views/admin/activities/_form.html.erb
+++ b/app/views/admin/activities/_form.html.erb
@@ -1,6 +1,7 @@
 <%= semantic_form_for [:admin, @activity], html: { multipart: true } do |f| %>
   <%= f.inputs 'Основное' do %>
     <%= f.input :title %>
+    <%= f.input :published %>
     <%= f.input :organization %>
 
     <%= render 'shared/editor_toolbar', element_id: 'activity_description' %>
