add favourite link with styling

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -5,6 +5,7 @@
     <div class="detail_page">
 
       <h1><%= @activity.title %>
+        <%= favourite_block @activity %>
         <% if @activity.participant? %>
           <span class="mark">Участник фестиваля!</span>
         <% end %>
